# local-llm-client

./: .gitignore  README.md  pyproject.toml
docs/: connecting.md
examples/: connect_and_generate.py  generate_with_mtp.py
llm_gateway_client/: __init__.py  client.py
local_llm_client/: __init__.py  client.py
tests/: test_client.py
